fixed scrollbar and layout

--- a/src/styles/mi2b2.css
+++ b/src/styles/mi2b2.css
@@ -14,7 +14,7 @@ div {
     padding: 0;
   }
   .ui-tabs .ui-tabs-panel{
-    padding: 0.3em 0 0;
+    padding: 0;
     background-color: rgba(63,63,63, 1);
   }
   li.ui-state-default{
@@ -34,13 +34,13 @@ div {
 /*=============================================== Main containers ============================================== */
 /*main page container*/
   div#inputcontainer{
-    position: relative;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    height: -webkit-calc(100vh - 4.8em);
-    height: -moz-calc(100vh - 4.8em);
-    height: calc(100vh - 4.8em);
+    height: -webkit-calc(100vh - 100px);
+    height: -moz-calc(100vh - 100px);
+    height: calc(100vh - 100px);
+    overflow: auto;
     margin: 0;
   }
 
@@ -64,9 +64,7 @@ div {
 /*================================================== Collaboration ================================================== */
 /*collaboration section*/
   .collab{
-    position: absolute;
-    left: 40px;
-    z-index: 9999;
+    padding-left: 40px;
     font-size: 11px;
     font-family: 'Droid Sans', sans-serif;
   }
@@ -74,8 +72,10 @@ div {
     display: none;
     border: 1px solid;
     margin-top: 2px;
-    padding: 2px;
+    padding: 4px 0 4px 0;
     background-color: #eaebda;
+    width: 220px;
+    text-align: center;
     font-size: 11px;
     font-family: 'Droid Sans', sans-serif;
   }
